--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 Auto Junkcode_[unknowncheats.me]_.exe
-GameFuckerUI.vcxproj.filters
 GameFuckerUI.vcxproj.user
+RCa21312
+RCb21312
 .vs
-Debug/
-Release/
-x64/
+junk/
+bin/
